@@ -32,6 +32,7 @@
 #define WebImage_h
 
 #include "WebCommon.h"
+#include "WebVector.h"
 
 #include <SkBitmap.h>
 
@@ -67,6 +68,10 @@ public:
     // then the frame whose size is desiredSize is returned. Otherwise,
     // the first frame is returned.
     WEBKIT_EXPORT static WebImage fromData(const WebData&, const WebSize& desiredSize);
+
+    // Returns a list of all frames in the image. Only the first frame at each pixel
+    // size will be returned.
+    WEBKIT_EXPORT static WebVector<WebImage> framesFromData(const WebData&);
 
     WEBKIT_EXPORT void reset();
     WEBKIT_EXPORT void assign(const WebImage&);
